<resources>
    <string name="app_name">CarrerMentor</string>
    <string name="hint_button_send">Сообщение</string>
    <string name="hint_button_user_name">Имя</string>
    <string name="hint_button_user_password">Пароль</string>
    <string name="hint_button_user_password_repeat">Повторите пароль</string>
    <string name="dialog_password_old">Старый:</string>
    <string name="dialog_password_new">Новый:</string>
    <string name="hint_button_user_email">Электронная почта</string>
    <string name="continue_button">Приступить</string>
    <string name="text_view_registration_button">Регистрация</string>
    <string name="text_view_login_button">Есть аккаунт?</string>
    <string name="text_view_forgot_pass">Забыли пароль</string>
    <string name="registration_button">Зарегестрироваться</string>
    <string name="login_button">Войти</string>
    <string name="difficulty_label">Сложность</string>
    <string name="language_label">Язык общения</string>
    <string name="specialization_label">Специализация</string>
    <string name="question_count_label">Количество вопросов</string>
    <string name="russian_language">Русский</string>
    <string name="english_language">Английский</string>
    <string name="junior_level">Junior</string>
    <string name="middle_level">Middle</string>
    <string name="senior_level">Senior</string>
    <string name="change_profile_data">Изменить данные</string>
    <string name="change_profile_account">Выйти из аккаунта</string>
    <string name="delete_profile">Удалить аккаунт</string>
    <string name="change_password_profile">Сменить пароль</string>
    <string name="change_style_profile">Сменить тему</string>
    <string name="dialog_label_name">Имя:</string>
    <string name="dialog_label_email">Почта:</string>
    <string name="article_title">Заголовок:</string>
    <string name="article_description">Описание:</string>
    <string name="article_content">Содержимое:</string>
    <string name="create_button">Создать</string>
    <string name="comments_text">Комментарии:</string>
    <string name="comment_hint">Добавить комментарий</string>
    <string name="show_password">Показать пароль</string>
    <string name="bar_chart_title">Время прохождения в часах</string>
    <string name="place_holder_profile">Тут появится статистика, когда начнешь проходить собеседования</string>
    <string name="sort_by_time">По дате публикации</string>
    <string name="sort_by_title">По заголовку</string>
    <string name="sort_by_size">По продолжительности</string>
    <string name="create_account">Создать аккаунт позже</string>
    <string name="create_article">Создание статьи</string>
</resources>