<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/background_color">


    <LinearLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/round_edit_user_message">

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_person_24"
            android:onClick="onClickOpenGallery"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_color"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/profile_header"
        android:layout_margin="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/message_background_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/change_profile_data"
            app:cornerRadius="15dp"
            android:onClick="onClickUpdateUserData"
            android:textColor="@color/text_color"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/change_profile_account"
            android:backgroundTint="@color/message_background_color"
            android:layout_margin="5dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="15dp"
            android:onClick="onClickProfileButton"
            android:textColor="@color/text_color"/>
        <Button
            android:id="@+id/delete_user_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/delete_profile"
            android:backgroundTint="@color/message_background_color"
            android:layout_margin="5dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="15dp"
            android:onClick="onClickProfileButton"
            android:textColor="@color/text_color"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>